# chat-fastapi-backend

./: .gitignore  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: f6145c23e872_create_users_table.py
app/: main.py
app/api/: deps.py
app/core/: config.py  security.py
app/db/: database.py
app/models/: __init__.py  user.py
app/schemas/: __init__.py  user.py
app/services/: user_service.py
scripts/: test_schemas.py
