[project]
name = "chat-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.13.3",
    "asyncpg==0.29.0",
    "bcrypt==4.2.0",
    "email-validator==2.2.0",
    "fastapi==0.115.0",
    "hiredis==3.0.0",
    "httpx==0.27.2",
    "passlib[bcrypt]==1.7.4",
    "psycopg2-binary==2.9.9",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.9",
    "redis==5.1.1",
    "sqlalchemy==2.0.35",
    "uvicorn[standard]==0.30.6",
]
